plot has not been updated for 0.5sec. [Currently only enabled if
BUFFERED is defined in src/gnuwin32/devga.c.]

The search for a directory for temporary files now checks that TMP and
TEMP point to actual writeable directories.

Rterm reverts to sending warning/error messages to stdout on Windows
95/98/ME.

Rcmd BATCH no longer attempts to redirect stderr on Windows 95/98/ME,
and so may work again there.

Calling dev.off() (or ending a session) when a windows() device is
open and recording plots automatically saves the current plot as the
last saved plot.

When building a package, src/Makefile.win is run if present, and if
that generates src/$(DLLNAME).dll the DLL is installed.  (DLLNAME is
the package name unless overridden.)

PKG_FFLAGS is now used if provided.

bringToTop() tested against the wrong limit for the device list and so
would sometimes not work for high-numbered devices if lower-numbered
devices had been closed.



rw1072
======

The changes to versioned install had ensured that the currently
installed copy of a package had its MD5 sums checked, not the version
waiting to be installed.  Now the correct version is checked.

The Copy, Paste, Copy&Paste and Kill buttons in the MDI mode failed to
restore focus to the console (see rw1070 RGui changes).

The BioConductor people had stolen the menu item for "Install
package(s) from CRAN..." so it was not being enabled/disabled
properly.

A package's DLL would only be built if standard source files were 
seen; now the presence of Makefile.win will trigger a build, allowing
nonstandard languages to be used.



rw1071
======

The system() function printed a spurious warning when the input argument
was used.

The File|Change Dir...|Browse dialog could cause R to crash.

Fixed a bug in versioned install of binary package bundles.

Help for max.col was not being found in CHTML help: we have worked around
a bug in HHW.

The maximum allowed `pointsize' for a windows() device has been