@@ -2,6 +2,8 @@
 #
 # ${R_HOME}/doc/manual/Makefile.win
 
+include ../../src/gnuwin32/MkRules
+
 srcdir = .
 top_srcdir = ../..
 subdir = doc/manual
@@ -27,7 +29,6 @@ RHOME=$(shell ../../src/gnuwin32/Rpwd.exe ../..)
 else
 RHOME=$(shell perl ../../src/gnuwin32/pwd.pl ../..)
 endif
-R_PKGS=base ctest eda lqs modreg mva nls splines stepfun tcltk ts
 
 R_PAPERSIZE = a4
 R_RD4DVI = ae
@@ -37,6 +38,11 @@ R_RD4PDF = ae,hyper
 R_PKGS_refman = base methods tools grid
 refman_TEXINPUTS = $(R_PKGS_refman:=-pkg.tex)
 refman_DEPENDENCIES = version.tex $(top_srcdir)/share/texmf/Rd.sty
+
+texinputs_BASE = $(R_PKGS_BASE:=-pkg.tex)
+texinputs_RECOMMENDED = $(R_PKGS_RECOMMENDED_EXPANDED:=-pkg.tex)
+fullrefman_TEXINPUTS = $(texinputs_BASE) $(texinputs_RECOMMENDED)
+
 
 texiincludes = version.texi R-defs.texi
 
@@ -73,11 +79,55 @@ refman.dvi: $(refman_TEXINPUTS) $(refman_DEPENDENCIES) \
 	  cat refman.top; \
 	  for f in $(refman_TEXINPUTS); do echo "\\input{$${f}}"; done; \
 	  cat refman.bot) > refman.tex
+	@$(RM) -f *.aux refman.toc refman.ind
+ifeq ($(strip $(BUILD)),CROSS)
+	@TEXINPUTS="../../share/texmf:$$TEXINPUTS" \
+	  $(LATEX) '\nonstopmode\input{refman.tex}'
+	@-$(MAKEINDEX) refman
+	@TEXINPUTS="../../share/texmf:$$TEXINPUTS" \
+	  $(LATEX) '\nonstopmode\input{refman.tex}'
+else
 	@TEXINPUTS="../../share/texmf;$$TEXINPUTS" \
 	  $(LATEX) '\nonstopmode\input{refman.tex}'
 	@-$(MAKEINDEX) refman
 	@TEXINPUTS="../../share/texmf;$$TEXINPUTS" \
 	  $(LATEX) '\nonstopmode\input{refman.tex}'
+endif
+
+fullrefman.dvi: $(fullrefman_TEXINPUTS) $(refman_DEPENDENCIES) \
+  refman.top refman.bot
+	@echo "DVI/LaTeX documentation: reference index ..."
+	@$(RM) -f *.aux refman.toc refman.ind
+	@(opt="$${R_PAPERSIZE:-$(R_PAPERSIZE)}paper"; \
+	  echo "\\documentclass[$${opt}]{book}"; \
+	  opt="$${R_RD4DVI:-$(R_RD4DVI)}"; \
+	  echo "\\usepackage[$${opt}]{Rd}"; \
+	  cat refman.top; \
+	  texinputs=`(for f in $(refman_TEXINPUTS); \
+	    do echo $${f}; done) | LC_COLLATE=C sort`; \
+	  for f in $${texinputs}; do echo "\\input{$${f}}"; done; \
+	  echo "\\part{}"; \
+	  texinputs=`(for f in $(fullrefman_TEXINPUTS); \
+	    do echo $${f}; done) | LC_COLLATE=C sort`; \
+	  for f in $(refman_TEXINPUTS); do \
+	    texinputs=`echo "$${texinputs}" | sed "s/$${f}//"`; \
+	  done; \
+	  for f in $${texinputs}; do echo "\\input{$${f}}"; done; \
+	  cat $(srcdir)/refman.bot) > fullrefman.tex
+	@$(RM) -f *.aux fullrefman.toc fullrefman.ind
+ifeq ($(strip $(BUILD)),CROSS)
+	@TEXINPUTS="../../share/texmf:$$TEXINPUTS" \
+	  $(LATEX) '\nonstopmode\input{fullrefman.tex}'
+	@-$(MAKEINDEX) fullrefman
+	@TEXINPUTS="../../share/texmf:$$TEXINPUTS" \
+	  $(LATEX) '\nonstopmode\input{fullrefman.tex}'
+else
+	@TEXINPUTS="../../share/texmf;$$TEXINPUTS" \
+	  $(LATEX) '\nonstopmode\input{fullrefman.tex}'
+	@-$(MAKEINDEX) fullrefman
+	@TEXINPUTS="../../share/texmf;$$TEXINPUTS" \
+	  $(LATEX) '\nonstopmode\input{fullrefman.tex}'
+endif
 
 R-admin.dvi: R-admin.texi $(texiincludes) 
 	$(TEX) R-admin.texi
@@ -148,17 +198,61 @@ else
 	  $(PDFLATEX) '\nonstopmode\input{refman.tex}'
 endif
 
+fullrefman.pdf: $(fullrefman_TEXINPUTS) $(refman_DEPENDENCIES) \
+   refman.top refman.bot
+	@echo " PDF/LaTeX documentation: reference index ..."
+	@(opt="$${R_PAPERSIZE:-$(R_PAPERSIZE)}paper"; \
+	  echo "\\documentclass[$${opt}]{book}"; \
+	  opt="$${R_RD4PDF:-$(R_RD4PDF)}"; \
+	  echo "\\usepackage[$${opt}]{Rd}"; \
+	  cat refman.top; \
+	  echo "\\part{}"; \
+	  texinputs=`(for f in $(refman_TEXINPUTS); \
+	    do echo $${f}; done) | LC_COLLATE=C sort`; \
+	  for f in $${texinputs}; do echo "\\input{$${f}}"; done; \
+	  echo "\\part{}"; \
+	  texinputs=`(for f in $(fullrefman_TEXINPUTS); \
+	    do echo $${f}; done) | LC_COLLATE=C sort`; \
+	  for f in $(refman_TEXINPUTS); do \
+	    texinputs=`echo "$${texinputs}" | sed "s/$${f}//"`; \
+	  done; \
+	  for f in $${texinputs}; do echo "\\input{$${f}}"; done; \
+	  cat refman.bot) > fullrefman.tex
+	@$(RM) -f *.aux fullrefman.toc fullrefman.ind
+ifeq ($(strip $(BUILD)),CROSS)
+	@TEXINPUTS="../../share/texmf:$$TEXINPUTS" \
+	  $(PDFLATEX) '\nonstopmode\input{fullrefman.tex}'
+	@$(MAKEINDEX) fullrefman
+	@TEXINPUTS="../../share/texmf:$$TEXINPUTS" \
+	  $(PDFLATEX) '\nonstopmode\input{fullrefman.tex}'
+	@TEXINPUTS="../../share/texmf:$$TEXINPUTS" \
+	  $(PDFLATEX) '\nonstopmode\input{fullrefman.tex}'
+else
+	@TEXINPUTS="../../share/texmf;$$TEXINPUTS" \
+	  $(PDFLATEX) '\nonstopmode\input{fullrefman.tex}'
+	@$(MAKEINDEX) fullrefman
+	@TEXINPUTS="../../share/texmf;$$TEXINPUTS" \
+	  $(PDFLATEX) '\nonstopmode\input{fullrefman.tex}'
+	@TEXINPUTS="../../share/texmf;$$TEXINPUTS" \
+	  $(PDFLATEX) '\nonstopmode\input{fullrefman.tex}'
+endif
+
 version.tex: $(top_srcdir)/VERSION
 	@echo "creating $(subdir)/$@"
 	@(v=`cat $(top_srcdir)/VERSION`; \
 	  v="$${v} (`sed 's|/|-|g' $(top_srcdir)/date-stamp`)"; \
 	  echo "$${v}") > $@
 
+# bundles such as VR are not unpacked in src/library directly
 %-pkg.tex: FORCE
-	@if perl ../../tools/Rdnewer.pl \
-	    "$(top_srcdir)/src/library/$*" "$@"; then \
-	  echo "collecting LaTeX docs for package \`$*' ..."; \
-	  (cd ../../src/gnuwin32/help && $(MAKE)  --no-print-directory RHOME=$(RHOME) latex-$*); \
+	@if test -d "$(top_srcdir)/src/library/$*" ; then \
+	  if perl ../../tools/Rdnewer.pl \
+	      "$(top_srcdir)/src/library/$*" "$@"; then \
+	    echo "collecting LaTeX docs for package \`$*' ..."; \
+	    (cd ../../src/gnuwin32/help && $(MAKE)  --no-print-directory RHOME=$(RHOME) latex-$*); \
+	    perl ../../tools/pkg2tex.pl $*; \
+	  fi \
+	else \
 	  perl ../../tools/pkg2tex.pl $*; \
 	fi
 FORCE:
@@ -205,10 +299,10 @@ version.texi: Makefile.win $(top_srcdir)/VERSION $(top_srcdir)/date-stamp
 
 mostlyclean: clean
 clean:
-	@-rm -f *.aux *.toc refman.i?? *.out *.log
+	@-rm -f *.aux *.toc *refman.i?? *.out *.log
 	@-rm -f *.cp *.cps *.fn *.fns *.ky *.kys \
 	  *.out *.pg *.pgs *.tmp *.tp *.vr *.vrs \
-	  version.tex version.texi refman.tex *-pkg.tex 
+	  version.tex version.texi refman.tex fullrefman.tex *-pkg.tex 
 distclean: clean
 	@-rm -f *.pdf *.dvi *.info* *.html
 maintainer-clean: distclean
