@@ -2,8 +2,8 @@
 #
 # ${RHOME}/tests/Makefile.win
 
-R_PKGS_BASE = \
-   base ctest eda grid lqs methods modreg mva nls splines stepfun tcltk tools ts
+# for R_PKGS_BASE
+include ../src/gnuwin32/MkRules
 
 srcdir = .
 
